test/fixtures/fail/ident_space_around_dot_leading.l4gs.g
; Whitespace is not allowed around the dot in a dotted identifier.
        foo .bar = 1
